# Simple-pointcloud-filter

./: CMakeLists.txt  README.md
include/Core/: Pipeline.hpp  PointCloud.hpp  Timer.hpp
include/Filters/: IFilter.hpp  PassThrough.hpp  VoxelFilter.hpp
src/: main.cpp
src/Core/: Pipeline.cpp  PointCloud.cpp
src/Filters/: PassThrough.cpp  VoxelFilter.cpp
tests/: 1m_points_multi_filtered.txt  1m_points_multi_filtered_2.txt  TestFilters.cpp  TestPassThroughFilter.cpp  TestPointCloud.cpp  TestVoxelGridFilter.cpp  data.txt  data.txtsave.txt  data_save_multi_filtered.txt  data_save_pt_filtered.txt  data_save_vxg_filtered.txt  generate_data.py
